--- a/wiki/Changelog.wiki
+++ b/wiki/Changelog.wiki
@@ -1,5 +1,7 @@
 #labels Featured
 = Changelog =
+=== v2.0.2 - August 10, 2010 ===
+ * Added Thumbmails - right click on pdf/jpg/png/gif file, select properties and card Thumbmails
 
 === v2.0.2 - August 7, 2010 ===
  * Added missing library for Picasa and Google Documents
