--- a/wiki/Changelog.wiki
+++ b/wiki/Changelog.wiki
@@ -1,6 +1,11 @@
 #labels Featured
 = Changelog =
 
+=== v2.3.0 - August 14, 2010 ===
+ * Detailed info about files
+   * ID3 tags - support for mp3, m4a, flac and ogg
+   * EXIF information - support for jpg, raw and tiff
+
 === v2.2.0 - August 12, 2010 ===
  * Added support for making ZIP archives with custom level of compression
 
